# c-lang

./: .gitignore  .gitmodules  README.md
cwave/: .clang-tidy  Makefile
cwave/src/: cwave.c  cwave.h
cwave/test/: all_tests.c  auto.py  cwave_test.c
game-engine/: .clang-tidy  .clangd  CMakeLists.txt  README.md  build.sh
game-engine/apps/: README.md  hello_main.cpp  particles.cpp
game-engine/include/: Window.hpp  app.hpp  component.hpp  hello.hpp  particle.hpp  particle_system.hpp
game-engine/include/util/: results.hpp
game-engine/src/: hello.cpp  particle.cpp  particle_system.cpp
stanford-149-parallel-algorithms/asst1/prog1_mandelbrot_threads/: mandelbrot  mandelbrotThread.cpp
stanford-149-parallel-algorithms/asst1/prog2_vecintrin/: Makefile  main.cpp  myexp
stm32nucleof411/: .clangd  Makefile  install.sh
stm32nucleof411/apps/: test.c
stm32nucleof411/src/: registers.c  registers.h
tee-demo/: main.c  test.txt
